--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 	"main": "",
 	"devDependencies": {},
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "live-server"
 	},
 	"repository": {
 		"type": "git",
